@@ -176,10 +176,13 @@ public class DataFrameTest {
 
         DataRow row = df.getRow(1);
         row.set("A", 999);
-        df.update(row);
 
-        Assert.assertEquals(new Integer(999), df.getRow(1).getInteger("A"));
+        Assert.assertEquals(Integer.valueOf(999), df.getRow(1).getInteger("A"));
+        row.set("A", null);
+        Assert.assertEquals(true, df.getRow(1).isNA("A"));
 
+        row.set("A", Values.NA);
+        Assert.assertEquals(true, df.getRow(1).isNA("A"));
         df.getColumn("A").sort();
     }
 
@@ -371,7 +374,13 @@ public class DataFrameTest {
         DataFrame df = DataFrameLoader.load(csv,csvReader);
         List<DataRow> r = df.getRows();
         int i = 0;
+        df.addStringColumn("test");
+        df.addDoubleColumn("test2");
+
         for (DataRow row : df.rows()) {
+            Assert.assertEquals(Values.NA, row.get("test"));
+            Assert.assertEquals(Values.NA, row.get("test2"));
+
             if (i == 2) {
                 Assert.assertEquals(true, row.isNA("B"));
             } else {
